Add graphing page - current/votlage and power graphs

--- a/test/config/psu_adapter.cfg
+++ b/test/config/psu_adapter.cfg
@@ -1,9 +1,9 @@
 [server]
 debug_mode = 1
 http_port  = 8888
-http_addr  = 127.0.0.1
+http_addr  = 192.168.0.14
 static_path = test/static
-adapters   = ttipsu, system_info
+adapters   = ttipsu, system_info, graph
 enable_cors = true
 
 [tornado]
@@ -12,9 +12,12 @@ logging = debug
 [adapter.ttipsu]
 module = ttipsu.adapter.TtiPsuAdapter
 background_task_interval = 1.0
-connections = 192.168.0.169:9221 192.168.0.177:9221
-#IP address:Port number
+connections = 192.168.0.169:9221 192.168.0.151:9221
 
 [adapter.system_info]
 module = odin.adapters.system_info.SystemInfoAdapter
+
+[adapter.graph]
+module = ttipsu.graph_adapter.GraphAdapter
+config_file = test/config/graph_config.json
 
