Reconfigure to work with new graph adapter

--- a/test/config/psu_adapter.cfg
+++ b/test/config/psu_adapter.cfg
@@ -3,7 +3,7 @@ debug_mode = 1
 http_port  = 8888
 http_addr  = 192.168.0.14
 static_path = test/static
-adapters   = ttipsu, system_info, graph
+adapters   = ttipsu, system_info, graphing
 enable_cors = true
 
 [tornado]
@@ -17,7 +17,6 @@ connections = 192.168.0.169:9221 192.168.0.151:9221
 [adapter.system_info]
 module = odin.adapters.system_info.SystemInfoAdapter
 
-[adapter.graph]
-module = ttipsu.graph_adapter.GraphAdapter
+[adapter.graphing]
+module = odin_graph.adapter.GraphAdapter
 config_file = test/config/graph_config.json
-
