--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,17 @@
 [build-system]
-requires = ["setuptools>=59.0.0", "wheel"]
+requires = ["setuptools>=59.0.0", "setuptools_scm>=8", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "ttipsu"
-version = "0.0.1"
+dynamic = ["version"]
 description = "Adapter for TTi PSU devices, models MX180TP & MX100QP"
 readme = "README.md"
 authors = [{name = "Evelyn Johns", email = "evelyn.johns@stfc.ac.uk"}]
 requires-python = ">=3.9"
 dependencies = [
-    "odin-control @ git+https://git@github.com/odin-detector/odin-control.git@1.5.0",
+    "odin-control @ git+https://git@github.com/odin-detector/odin-control.git@1.6.0",
+    "odin-graph @ git+https://git@github.com/stfc-aeg/odin-graph.git",
 ]
 
 [tool.ruff]
@@ -29,3 +30,5 @@ lint.select = [
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
+
+[tool.setuptools_scm]
