--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [{name = "Evelyn Johns", email = "evelyn.johns@stfc.ac.uk"}]
 requires-python = ">=3.9"
 dependencies = [
     "odin-control @ git+https://git@github.com/odin-detector/odin-control.git@1.6.0",
-    "odin-graph @ git+https://git@github.com/stfc-aeg/odin-graph.git",
+    "odin-graph @ git+https://git@github.com/stfc-aeg/odin-graph.git@1.0.0",
 ]
 
 [tool.ruff]
